fixed align

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -116,12 +116,14 @@
     padding-left: 1rem;
 
     @media (min-width: 992px) {
-      justify-content: flex-end;
       padding-left: 2rem;
     }
   }
 
   .footer-brand {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
     max-width: 300px;
 
